--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "eslint": "8.38.0",
@@ -18,7 +19,9 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "sass": "^1.62.0",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "yup": "^1.2.0"
   }
 }
