--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-slick": "^0.29.0",
     "sass": "^1.62.0",
     "swiper": "^8.4.5",
     "yup": "^1.2.0"
